@@ -21,6 +21,7 @@ import static org.junit.Assert.assertEquals;
 import java.nio.file.Files;
 import java.nio.file.Path;
 import java.nio.file.StandardCopyOption;
+import java.util.List;
 
 import org.apache.tika.TikaTest;
 import org.apache.tika.io.TikaInputStream;
@@ -353,5 +354,11 @@ public class ODFParserTest extends TikaTest {
         String xml = getXML("testODTStyles3.odt").xml;
         System.out.println(xml);
         assertContains("<p><b>WOUTERS Rolf</b><span class=\"annotation\"> Beschermde persoon is overleden </annotation>", xml);
+    }
+
+    @Test
+    public void testEmbedded() throws Exception {
+        List<Metadata> metadataList = getRecursiveMetadata("testODTEmbedded.odt");
+        assertEquals(3, metadataList.size());
     }
 }
